plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'soomsheo'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Lombok
	implementation 'org.projectlombok:lombok'
	annotationProcessor('org.projectlombok:lombok')
	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	// sockJS
	implementation 'org.webjars:sockjs-client:1.5.1'
	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Firebase
	implementation 'com.google.firebase:firebase-admin:9.3.0'

	//Json
	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'

    implementation 'com.mysql:mysql-connector-j'

	runtimeOnly("com.h2database:h2") // 테스트를 위한 의존성 (나중에 지우기)
}

tasks.named('test') {
	useJUnitPlatform()
}
